--- a/apps/memorizer/kustomize/base/deployment.yaml
+++ b/apps/memorizer/kustomize/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: memorizer
-          image: registry.fullstack.pw/memorizer:latest
+          image: harbor.fullstack.pw/library/memorizer:latest
           ports:
             - containerPort: 8080
           env:
