--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -108,6 +108,27 @@ jobs:
           "TEST_RETRIES": "2"
         }
 
+  versioning:
+    runs-on: self-hosted
+    needs: dev-cypress-tests
+    name: Versioning
+    steps:
+      - name: Get Next Version
+        id: semver
+        uses: ietf-tools/semver-action@v1
+        with:
+          token: ${{ github.token }}
+          branch: main
+
+      - name: Create Release
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          allowUpdates: true
+          draft: false
+          makeLatest: true
+          tag: ${{ steps.semver.outputs.next }}
+          body: Changelog Contents
+          token: ${{ github.token }}
   # stg-deploy:
   #   needs: [determine-app, dev-cypress-tests]
   #   if: needs.determine-app.outputs.app_paths != '[]'
