--- a/apps/enqueuer/kustomize/base/deployment.yaml
+++ b/apps/enqueuer/kustomize/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: enqueuer
-          image: harbor.fullstack.pw/library/enqueuer:latest
+          image: registry.fullstack.pw/library/enqueuer:latest
           ports:
             - containerPort: 8080
           env:
