--- a/apps/writer/kustomize/base/deployment.yaml
+++ b/apps/writer/kustomize/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: writer
-          image: harbor.fullstack.pw/library/writer:latest
+          image: registry.fullstack.pw/library/writer:latest
           ports:
             - containerPort: 8080
           env:
