--- a/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
@@ -4,17 +4,11 @@ resources:
 patches:
   - patch: |-
       - op: replace
-        path: /metadata/annotations/external-dns.alpha.kubernetes.io~1hostname
-        value: "dev.enqueuer.fullstack.pw"
-      - op: replace
-        path: /spec/tls/0/hosts/0
-        value: "dev.enqueuer.fullstack.pw"
-      - op: replace
-        path: /spec/rules/0/host
+        path: /spec/hosts/0
         value: "dev.enqueuer.fullstack.pw"
     target:
-      kind: Ingress
-      name: enqueuer
+      kind: VirtualService
+      name: ascii-frontend
   - patch: |-
       - op: replace
         path: /spec/template/spec/containers/0/env/2/value
