--- a/apps/ascii-frontend/kustomize/base/kustomization.yaml
+++ b/apps/ascii-frontend/kustomize/base/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
-  - ingress.yaml
+  - virtualservice.yaml
 
 namespace: default
