--- a/apps/writer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/writer/kustomize/overlays/dev/kustomization.yaml
@@ -29,4 +29,4 @@ patches:
         value: "dev.writer.fullstack.pw"
     target:
       kind: VirtualService
-      name: ascii-frontend
+      name: writer
