--- a/apps/writer/kustomize/overlays/stg/kustomization.yaml
+++ b/apps/writer/kustomize/overlays/stg/kustomization.yaml
@@ -18,4 +18,4 @@ patches:
         value: "stg.writer.fullstack.pw"
     target:
       kind: VirtualService
-      name: ascii-frontend
+      name: writer
