--- a/apps/memorizer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/memorizer/kustomize/overlays/dev/kustomization.yaml
@@ -29,4 +29,4 @@ patches:
         value: "dev.memorizer.fullstack.pw"
     target:
       kind: VirtualService
-      name: ascii-frontend
+      name: memorizer
