--- a/apps/memorizer/kustomize/overlays/stg/kustomization.yaml
+++ b/apps/memorizer/kustomize/overlays/stg/kustomization.yaml
@@ -18,4 +18,4 @@ patches:
         value: "stg.memorizer.fullstack.pw"
     target:
       kind: VirtualService
-      name: ascii-frontend
+      name: memorizer
