--- a/apps/writer/kustomize/base/deployment.yaml
+++ b/apps/writer/kustomize/base/deployment.yaml
@@ -30,12 +30,15 @@ spec:
                   name: cluster-secrets
                   key: REDIS_PASSWORD
             - name: DB_USER
-              value: "appuser"
+              valueFrom:
+                secretKeyRef:
+                  name: cluster-secrets
+                  key: POSTGRES_USER
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-app-credentials
-                  key: password
+                  name: cluster-secrets
+                  key: POSTGRES_PASSWORD
             - name: DB_HOST
               value: "dev.postgres.fullstack.pw"
             - name: DB_SSLMODE
