--- a/apps/writer/kustomize/base/deployment.yaml
+++ b/apps/writer/kustomize/base/deployment.yaml
@@ -40,7 +40,7 @@ spec:
                   name: dev-postgres-app
                   key: password
             - name: DB_HOST
-              value: "dev-postgres-rw.dev-postgres.svc.cluster.local"
+              value: "dev-postgres-rw.default.svc.cluster.local"
             - name: DB_SSLMODE
               value: "require"
           resources:
