--- a/apps/writer/kustomize/base/deployment.yaml
+++ b/apps/writer/kustomize/base/deployment.yaml
@@ -41,6 +41,8 @@ spec:
                   key: password
             - name: DB_HOST
               value: "dev-postgres-rw.default.svc.cluster.local"
+            - name: DB_NAME
+              value: "app"
             - name: DB_SSLMODE
               value: "require"
           resources:
