--- a/apps/writer/kustomize/base/deployment.yaml
+++ b/apps/writer/kustomize/base/deployment.yaml
@@ -40,7 +40,7 @@ spec:
                   name: postgres-app
                   key: password
             - name: DB_HOST
-              value: "dev-postgres-rw.default.svc.cluster.local"
+              value: "postgres-rw.default.svc.cluster.local"
             - name: DB_NAME
               value: "app"
             - name: DB_SSLMODE
