feat(CD): Convert Deployments to Argo Rollouts with Blue-Green strategy
Convert all application Deployments to Argo Rollouts to enable
progressive delivery and automated testing before production deployment.

Changes:
- Replace Deployment resources with Rollout resources for all apps
- Add preview services for Blue-Green deployments
- Configure Blue-Green strategy with manual promotion
- Update Kustomize overlays to target Rollout kind
- Set autoPromotionEnabled=false for Cypress testing integration

Applications updated:
- writer
- enqueuer
- memorizer
- ascii-frontend

This enables automated E2E testing in dev environment before
promoting changes to production.

--- a/apps/ascii-frontend/kustomize/overlays/prod/kustomization.yaml
+++ b/apps/ascii-frontend/kustomize/overlays/prod/kustomization.yaml
@@ -17,5 +17,5 @@ patches:
         path: /spec/replicas
         value: 2
     target:
-      kind: Deployment
+      kind: Rollout
       name: ascii-frontend
