--- a/apps/writer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/writer/kustomize/overlays/dev/kustomization.yaml
@@ -10,18 +10,7 @@ patches:
         path: /spec/template/spec/containers/0/env/2/value
         value: "queue-dev"
     target:
-      kind: Deployment
-      name: writer
-  - patch: |-
-      - op: replace
-        path: /spec/strategy
-        value:
-          type: RollingUpdate
-          rollingUpdate:
-            maxSurge: 100%
-            maxUnavailable: 50%
-    target:
-      kind: Deployment
+      kind: Rollout
       name: writer
   - patch: |-
       - op: replace
