--- a/apps/ascii-frontend/kustomize/base/kustomization.yaml
+++ b/apps/ascii-frontend/kustomize/base/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deployment.yaml
+  - rollout.yaml
+  - service-preview.yaml
   - service.yaml
   - virtualservice.yaml
 
