--- a/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/enqueuer/kustomize/overlays/dev/kustomization.yaml
@@ -14,16 +14,5 @@ patches:
         path: /spec/template/spec/containers/0/env/2/value
         value: "dev"
     target:
-      kind: Deployment
-      name: enqueuer
-  - patch: |-
-      - op: replace
-        path: /spec/strategy
-        value:
-          type: RollingUpdate
-          rollingUpdate:
-            maxSurge: 100%
-            maxUnavailable: 50%
-    target:
-      kind: Deployment
+      kind: Rollout
       name: enqueuer
