--- a/apps/enqueuer/kustomize/overlays/prod/kustomization.yaml
+++ b/apps/enqueuer/kustomize/overlays/prod/kustomization.yaml
@@ -14,5 +14,5 @@ patches:
         path: /spec/template/spec/containers/0/env/2/value
         value: "prod"
     target:
-      kind: Deployment
+      kind: Rollout
       name: enqueuer
