feat(argo-rollouts): add Cypress E2E tests to enqueuer Blue-Green deployment
Add AnalysisTemplate that runs Cypress tests against preview deployment
before promoting to active. Tests run in Kubernetes Job using official
Cypress Docker image.

Changes:
- Create shared AnalysisTemplate for Cypress tests
- Configure enqueuer Rollout with prePromotionAnalysis
- Tests run against external HTTPS endpoint
- Auto-promotion disabled until tests pass

This enables automated E2E testing before production deployment.

--- a/apps/enqueuer/kustomize/base/rollout.yaml
+++ b/apps/enqueuer/kustomize/base/rollout.yaml
@@ -46,3 +46,13 @@ spec:
       previewService: enqueuer-preview
       autoPromotionEnabled: false
       scaleDownDelaySeconds: 30
+      prePromotionAnalysis:
+        templates:
+          - templateName: cypress-tests
+        args:
+          - name: app-name
+            value: enqueuer
+          - name: app-url
+            value: "https://dev.enqueuer.fullstack.pw"
+          - name: environment
+            value: "dev"
