feat: implement version-based image tagging for dev/prod promotion
- Dev overlays use v1.0.0 image tags
- Prod overlays use v0.9.0 image tags (will be promoted after Cypress tests pass)
- Remove prePromotionAnalysis from prod rollouts (tests only run in dev)
- Use kustomize images field for proper image tag management

--- a/apps/ascii-frontend/kustomize/overlays/dev/kustomization.yaml
+++ b/apps/ascii-frontend/kustomize/overlays/dev/kustomization.yaml
@@ -4,6 +4,10 @@ kind: Kustomization
 resources:
   - ../../base
 
+images:
+  - name: registry.fullstack.pw/library/ascii-frontend
+    newTag: v1.0.0
+
 patches:
   - patch: |-
       - op: replace
