feat(enqueuer): implement auto-promotion to prod after Cypress tests
- Add postPromotionAnalysis to run after successful dev deployment
- Promotion job updates prod overlay image tag via git commit
- Requires GITHUB_TOKEN secret for repo write access
- Idempotent: skips if prod already at target version

--- a/apps/enqueuer/kustomize/base/kustomization.yaml
+++ b/apps/enqueuer/kustomize/base/kustomization.yaml
@@ -4,5 +4,7 @@ resources:
   - service-preview.yaml
   - virtualservice.yaml
   - analysis-template.yaml
+  - promotion-template.yaml
+  - promotion-rbac.yaml
 
 namespace: default
